# shortcuts

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
src/: main.py
src/api/v1/: __init__.py  shortcuts.py
src/configs/: config.py  logger.py
src/cruds/: base.py  shortcuts_crud.py
src/database/: database.py
src/database/migrations/: env.py
src/database/migrations/versions/: fe5692a663df_.py
src/models/: __init__.py  base.py  shortcuts.py
src/schemas/: shortcuts_schemas.py
tests/unit/test_crud/: test_shortcuts_crud.py
tests/unit/test_schemas/: test_shortcuts_schemas.py
